// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar integration test should flow: bookmarks button click 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "models",
        },
        "type": "BOOKMARKS_REQUEST",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "some-id": Object {
        "controller": "models",
        "error": null,
        "isErrorVisible": false,
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
      },
    },
    "bookmarks": Object {
      "models": Object {
        "errors": null,
        "results": Array [],
        "status": "PENDING",
      },
      "showModal": false,
    },
  },
}
`;

exports[`SearchBar integration test should flow: in bookmarks dropdown: click on "bookmark this page" 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "query": "result",
        },
        "type": "BOOKMARKS_MODAL_OPENED",
      },
    ],
  ],
  "state": Object {
    "autocomplete": Object {
      "some-id": Object {
        "controller": "models",
        "error": null,
        "isErrorVisible": false,
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
      },
    },
    "bookmarks": Object {
      "currentQuery": "result",
      "models": Object {
        "errors": null,
        "results": Array [],
        "status": "PENDING",
      },
      "showModal": true,
    },
  },
}
`;
